add home route skeleton setup

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,15 @@
-<h1>hello from home.handlebars!</h1>
+   
+   
+   <!--
+        {{#each gallery.paintings as |painting|}}
+    <section class="card">
+      <a href="/painting/{{id}}">
+        <header>{{title}}</header>
+
+        <div class="card-body">
+          <img src="/images/{{filename}}" alt="{{description}}">
+          <p>By: {{artist}}</p>
+        </div>
+      </a>
+    </section>
+    {{/each}}
