--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,12 +1,19 @@
 {{#each posts as |post|}}
   <div class="card" style="width: 18rem;">
     <div class="card-body">
-      <h5 class="card-title">{{user_id}}</h5>
+      <h5 class="card-title">{{user.username}}</h5>
       <h6 class="card-subtitle mb-2 text-muted">Posted on: {{created_on}}</h6>
       <p class="card-text">{{post_content}}</p>
       <a href="#" class="card-link">Comment</a>
       <a href="#" class="card-link">Another link</a>
     </div>
+    {{#each comments as |comment|}}
+      <div class="card-body">
+        <h5 class="card-title">{{user_id}}</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Posted on:{{created_on}}</h6>
+        <p class="card-text">{{comment_content}}</p>
+      </div>
+    {{/each}}
   </div>
 
 {{/each}}
