--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,10 +30,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Dashboard</a>
+                <a class="nav-link" href="/dashboard">Dashboard</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
