--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,1 +1,13 @@
-<h1>Hello from dashboard.handlebars</h1>
+<h1>Your posts, {{userData.username}}:</h1>
+<br>
+
+{{!-- {{#each posts as |post|}}
+  <div class="card shadow p-3 mb-5 bg-body rounded" style="">
+    <div class="card-body">
+      <h5 class="card-title"></h5>
+      <h6 class="card-subtitle mb-2 text-muted">Posted on: </h6>
+      <p class="card-text">{{dataValues.post_content}}</p>
+      <a href="#" class="card-link">Comment</a>
+      <a href="#" class="card-link">Another link</a>
+    </div>
+  </div> --}}
