--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,7 @@
 <h1>Your posts, {{userData.username}}:</h1>
 <br>
 
-{{!-- {{#each posts as |post|}}
+{{#each posts as |post|}}
   <div class="card shadow p-3 mb-5 bg-body rounded" style="">
     <div class="card-body">
       <h5 class="card-title"></h5>
@@ -10,4 +10,4 @@
       <a href="#" class="card-link">Comment</a>
       <a href="#" class="card-link">Another link</a>
     </div>
-  </div> --}}
+  </div>
