display posts and comments on dashboard

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,15 +2,15 @@
   <div class="card shadow p-3 mb-5 bg-body rounded" style="">
     <div class="card-body">
       <h5 class="card-title">{{user.username}}</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Posted on: {{created_on}}</h6>
+      <h6 class="card-subtitle mb-2 text-muted">Posted on: {{formatDate created_on}}</h6>
       <p class="card-text">{{post_content}}</p>
       <a href="#" class="card-link">Comment</a>
-      <a href="#" class="card-link">Another link</a>
+      <a href="#" class="card-link">See post</a>
     </div>
     {{#each comments as |comment|}}
       <div class="card" style="">
       <div class="card-body">
-        <h6 class="card-subtitle mb-2 text-muted">Comment by {{user.username}} on: {{created_on}}</h6>
+        <h6 class="card-subtitle mb-2 text-muted">Comment by {{user.username}}, on: {{formatDate created_on}}</h6>
         <p class="card-text">{{comment_content}}</p>
       </div>
       </div>
