--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,13 +1,25 @@
 <h1>Your posts, {{userData.username}}:</h1>
 <br>
 
-{{#each posts as |post|}}
+{{#each userData.posts as |post|}}
   <div class="card shadow p-3 mb-5 bg-body rounded" style="">
     <div class="card-body">
       <h5 class="card-title"></h5>
-      <h6 class="card-subtitle mb-2 text-muted">Posted on: </h6>
+      <h6 class="card-subtitle mb-2 text-muted">Posted on: {{formatDate dataValues.created_on}}</h6>
       <p class="card-text">{{dataValues.post_content}}</p>
       <a href="#" class="card-link">Comment</a>
       <a href="#" class="card-link">Another link</a>
     </div>
   </div>
+  {{/each}}
+  <br>
+  <h1>Your comments:</h1>
+      {{#each userData.comments as |comment|}}
+      <div class="card" style="">
+      <div class="card-body">
+        <h6 class="card-subtitle mb-2 text-muted">Comment written on: {{formatDate dataValues.created_on}}</h6>
+        <p class="card-text">{{dataValues.comment_content}}</p>
+      </div>
+      </div>
+      <br>
+    {{/each}}
