add login logout in navbar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,9 +35,15 @@
               <li class="nav-item">
                 <a class="nav-link" href="/dashboard">Dashboard</a>
               </li>
+              {{#if loggedIn}}
+              <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
+              </li>
+              {{else}}
               <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
               </li>
+              {{/if}}
             </ul>
           </div>
         </div>
